Update to release 1.0.1.

--- a/nano-exporter/Makefile
+++ b/nano-exporter/Makefile
@@ -15,16 +15,17 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=nano-exporter
-PKG_VERSION:=1.0.0
+PKG_VERSION:=1.0.1
 PKG_RELEASE:=1
 
-PKG_SOURCE:=v$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://github.com/fis/nano-exporter/archive/
-PKG_HASH:=db192d0420f1c34ecb442b54b31fd1b4371800423f66adbf9a9a65695ebc8b02
+PKG_SOURCE:=nano-exporter-v$(PKG_VERSION).tar.gz
+PKG_SOURCE_URL:=https://github.com/fis/nano-exporter/releases/download/v1.0.1/
+PKG_HASH:=e2061af79099a4f36e41f26b548b627350b7e17a70d30d1ae865bea9fee77b9c
 PKG_LICENSE:=Apache-2.0
 PKG_LICENSE_FILES:=LICENSE
 
-PKG_BUILD_DIR:=$(BUILD_DIR)/nano-exporter-$(PKG_VERSION)
+# TODO: for release 1.0.2, remove the 'v' prefix from file/dir names, as well as this line
+PKG_BUILD_DIR:=$(BUILD_DIR)/nano-exporter-v$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
 
