Rename the network collector to netdev.
Resolves #14. For consistency with node_exporter, and with other
network-related collectors.

--- a/test/Makefile
+++ b/test/Makefile
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-COLLECTOR_TESTS := cpu diskstats filesystem hwmon meminfo network stat textfile uname
+COLLECTOR_TESTS := cpu diskstats filesystem hwmon meminfo netdev stat textfile uname
 
 COLLECTOR_TEST_PROGS := $(foreach c,$(COLLECTOR_TESTS),$(c)_test)
 COLLECTOR_TEST_OBJS := $(foreach p,$(COLLECTOR_TEST_PROGS),$(p).o)
